--- a/src/common/styles/scss/index.scss
+++ b/src/common/styles/scss/index.scss
@@ -8,6 +8,7 @@ $gray: #eee;          // 灰色
 $deep_gray: #e5e5e5;  // 深灰色
 $light_gray: #f6f6f7; // 浅灰色
 $black: #000;         // 黑色
+$red: red;            // 红色
 
 /**
 * 样式 单个样式
